tests/compile-fail/Rule_7_1.rs
//! Rule

"N/A"
//~^ ERROR expected item, found `"N/A"`

// #![forbid(clippy_pedantic)]
// #![forbid(clippy)]
// #![forbid(warnings)]

// fn main() {
//     let count: i32 = 0o52;
//     let _ = count;
// }
